# Collision

./: .gitignore  CMakeLists.txt  README.md  benchmark_full_20260110_223117.csv  benchmark_full_20260112_010314.csv  report.md  vcpkg.json
scripts/: benchmark.py  render.sh  render_pyvista.py  run.sh  run_benchmark.sh
simulation/: CollisionSimulator
src/: main.cpp
src/accel/: bvh.cpp  bvh.h  spatial_index.cpp  spatial_index.h
src/core/: common.h  mesh.cpp  mesh.h  mesh_cache.cpp  mesh_cache.h  resource_pool.cpp  resource_pool.h  surface.cpp  surface.h  types.h
src/gpu/: broadphase.cu  broadphase.cuh  builtin_clz_msvc.h  bvh_builder.cu  bvh_builder.cuh  collision_detector.cu  collision_detector.cuh  contact_kernel.cu  contact_kernel.cuh  msvc_intrinsics.h  sweep_kernel.cu  sweep_kernel.cuh  tree_kernel.cu  tree_kernel.cuh
src/physics/: body_properties.h  collision_detector.cpp  collision_detector.h  contact.h  dynamics.h  entity.cpp  entity.h  force_builder.h  integrator.cpp  integrator.h  intersection.h  material.h  proximity.cpp  proximity.h  rigid_body.cpp  rigid_body.h  solver.cpp  solver.h
src/scene/: boundary.cpp  boundary.h  environment.cpp  environment.h  scene.cpp  scene.h  world.cpp  world.h
src/simulation/: controller.cpp  controller.h  simulator.cpp  simulator.h
